--- a/JEGL/JEGL.cabal
+++ b/JEGL/JEGL.cabal
@@ -58,7 +58,7 @@ library
                  , bytestring                    >= 0.9        && < 0.11
                  , text                          >= 0.11       && < 2.0
                  , persistent                    >= 2.0        && < 2.2
-                 , persistent-mysql              >= 2.1.2      && < 2.2
+                 , persistent-postgresql         >= 2.1.1      && < 2.2
                  , persistent-template           >= 2.0        && < 2.2
                  , template-haskell
                  , shakespeare                   >= 2.0        && < 2.1
@@ -120,7 +120,7 @@ test-suite test
                  , yesod-core
                  , yesod
                  , persistent
-                 , persistent-mysql
+                 , persistent-postgresql
                  , resourcet
                  , monad-logger
                  , shakespeare
