--- a/JEGL/config/settings.yml
+++ b/JEGL/config/settings.yml
@@ -18,12 +18,12 @@ ip-from-header: "_env:IP_FROM_HEADER:false"
 # skip-combining: false
 
 database:
-  user:     "_env:MYSQL_USER:JEGL"
-  password: "_env:MYSQL_PASSWORD:JEGL"
-  host:     "_env:MYSQL_HOST:localhost"
-  port:     "_env:MYSQL_PORT:5432"
-  database: "_env:MYSQL_DATABASE:JEGL"
-  poolsize: "_env:MYSQL_POOLSIZE:10"
+  user:     "_env:PGUSER:jegl"
+  password: "_env:PGPASS:JEGL"
+  host:     "_env:PGHOST:localhost"
+  port:     "_env:PGPORT:5432"
+  database: "_env:PGDATABASE:jegl"
+  poolsize: "_env:PGPOOLSIZE:10"
 
 copyright: Insert copyright statement here
 #analytics: UA-YOURCODE
