--- a/MIAMIB/MIAMIB.cabal
+++ b/MIAMIB/MIAMIB.cabal
@@ -1,4 +1,4 @@
-name:              JEGL
+name:              MIAMIB
 version:           0.0.0
 cabal-version:     >= 1.8
 build-type:        Simple
@@ -22,13 +22,9 @@ library
                      Settings.StaticFiles
                      Handler.Common
                      Handler.Home
-                     Handler.SignIn
-                     Handler.Users
-                     Handler.UserDetails
-                     Handler.Movies
-                     Handler.MovieDetails
-                     Handler.NewMovie
+                     Handler.Restaurants
                      Handler.NewReview
+                     Handler.RestaurantPage
 
     if flag(dev) || flag(library-only)
         cpp-options:   -DDEVELOPMENT
@@ -65,7 +61,7 @@ library
                  , bytestring                    >= 0.9        && < 0.11
                  , text                          >= 0.11       && < 2.0
                  , persistent                    >= 2.0        && < 2.2
-                 , persistent-postgresql         >= 2.1.1      && < 2.3
+                 , persistent-postgresql         >= 2.1.1      && < 2.2
                  , persistent-template           >= 2.0        && < 2.2
                  , template-haskell
                  , shakespeare                   >= 2.0        && < 2.1
@@ -89,13 +85,13 @@ library
                  , vector
                  , time
 
-executable         JEGL
+executable         MIAMIB
     if flag(library-only)
         Buildable: False
 
     main-is:           main.hs
     hs-source-dirs:    app
-    build-depends:     base, JEGL
+    build-depends:     base, MIAMIB
 
     ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N
 
@@ -122,7 +118,7 @@ test-suite test
                 TupleSections
 
     build-depends: base
-                 , JEGL
+                 , MIAMIB
                  , yesod-test >= 1.4.3 && < 1.5
                  , yesod-core
                  , yesod
